# dioxus-starter

./: Cargo.toml
src/: main.rs
src/components/: content.rs  footer.rs
src/hooks/: markdown.rs  mode.rs
src/pages/: starter.rs
