[package]
name = "dioxus-starter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.1", features = ["web"] }
dioxus-web = "0.5.1"
dioxus-router = "0.5.0"
fermi = "0.4.3"
serde = "1.0.201"

js-sys = "0.3.58"
web-sys = { version = "0.3.58", features = ["Storage"] }
dioxus-free-icons = { version = "0.8.4", features = [
    "font-awesome-brands",
    "font-awesome-solid",
] }
dioxus-toast = { version = "0.3.0", default-features = false, features = [
    "web",
] }
gloo = "0.11.0"
gloo-storage = "0.3"
log = "0.4.6"
wasm-logger = "0.2.0"
anyhow = "1.0.57"
urlencoding = "2.1.0"
pulldown-cmark = "0.10.3"
dioxus-local-storage = { git = "https://github.com/mrxiaozhuox/dioxus-local-storage" }
